--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="header-bg">
         <div class="half-width">
             <h1>Hello I'm</h1>
-        <h1> <span class="color"> Sadik Website Name</span></h1>
+        <h1> <span class="color"> Felling Happy Now!</span></h1>
         <p>A global finance watchdog has decided to put Myanmar on its watchlist this week for money-laundering by transnational drug</p>
         <a class="link-button" target="_blank" href="https://www.youtube.com/">Youtube</a>
         </div>
